# MarkTwo

./: .gitignore  CMakeLists.txt  README.md
assets/data/: Level1.xml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
scripts/: build.sh  firstTimeEnvironentSetup.sh
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameGlobals.h  Main.cpp  Map.cpp  Map.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h
src/Components/: ColliderComponent.h  KeyboardControlComponent.h  PlayerProjectileEmitterController.h  ProjectileEmitterComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
src/Core/: Game.cpp  Game.h
src/Core/Managers/: AssetManager.cpp  AssetManager.h  EventManager.cpp  EventManager.h  InputManager.cpp  InputManager.h  LoadManager.cpp  LoadManager.h  SettingsManager.cpp  SettingsManager.h  SoundManager.cpp  SoundManager.h  StyleManager.cpp  StyleManager.h  UIManager.cpp  UIManager.h
src/Core/Math/: Utility.cpp  Utility.h  Vector.cpp  Vector.h  VectorMethods.cpp  VectorMethods.h
src/Core/Systems/: Assert.h  Event.h  Hash.cpp  Hash.h  Logging.h  Systems.h
src/Core/Types/: LuaTableLoader.cpp  LuaTableLoader.h  Sprite.cpp  Sprite.h  String.cpp  String.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/Core/UI/: UICore.cpp  UICore.h  UICoreTypes.cpp  UICoreTypes.h  UIManager.cpp  UIManager.h  UIScreenBase.cpp  UIScreenBase.h
src/Core/UI/Primitives/: Box.cpp  Box.h  Button.cpp  Button.h  HorizontalStack.cpp  HorizontalStack.h  Icon.cpp  Icon.h  TextBlock.cpp  TextBlock.h  VerticalStack.cpp  VerticalStack.h
src/Core/UI/Types/: Box.cpp  Box.h  Button.cpp  Button.h  HorizontalStack.cpp  HorizontalStack.h  Icon.cpp  Icon.h  StackBase.cpp  StackBase.h  StackPanel.cpp  StackPanel.h  StyleTypes.cpp  StyleTypes.h  TextBlock.cpp  TextBlock.h  UIBase.cpp  UIBase.h  UICoreTypes.cpp  UICoreTypes.h  UIScreenBase.cpp  UIScreenBase.h  VerticalStack.cpp  VerticalStack.h  Widget.cpp  Widget.h
src/Data/: AssetManifest.lua  AssetManifest.xml  MapsManifest.lua  MapsManifest.xml  Settings.lua  Settings.xml  Styles.lua  Styles.xml
src/Data/Maps/: mp_1.lua  mp_1.xml
src/Data/TileMaps/: tm_1.lua  tm_1.xml
src/Data/Widgets/: HudScreen.xml  PauseScreen.xml
src/Game/Managers/: EventManager.cpp  EventManager.h  FrontendManager.cpp  FrontendManager.h  InputManager.cpp  InputManager.h  LoadManager.cpp  LoadManager.h  MapManager.cpp  MapManager.h  UIManager.cpp  UIManager.h
src/Game/Player/: Player.cpp  Player.h  PlayerMovement.cpp  PlayerMovement.h
src/Game/UIScreens/: HUDScreen.cpp  HUDScreen.h  PauseScreen.cpp  PauseScreen.h
src/Utilities/: FileReader.h  Math.cpp  Math.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
